Things are working. Going to try fetching from my DB

--- a/client/scss/_mainStyles.scss
+++ b/client/scss/_mainStyles.scss
@@ -11,6 +11,19 @@ h1 {
 
 .main-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+}
+
+.employeePageContainer {
+    width: 40%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 1.5;
 }
 
