--- a/client/scss/_mainStyles.scss
+++ b/client/scss/_mainStyles.scss
@@ -1,6 +1,7 @@
 
 body {
     background: $background-color;
+    font-family: 'Lato', sans-serif;
 }
 
 h1 {
@@ -27,3 +28,17 @@ h1 {
     line-height: 1.5;
 }
 
+.managerPageContainer {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 1.5;
+}
+
+.managerFunctionalityLists {
+    display: flex;
+}
