Just comitting to be safe! Working on Manager employee functionality

--- a/client/scss/_mainStyles.scss
+++ b/client/scss/_mainStyles.scss
@@ -42,3 +42,30 @@ h1 {
 .managerFunctionalityLists {
     display: flex;
 }
+
+
+.employeeFunctionalityContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+
+.functionalityHeader {
+    margin: 1px;
+}
+
+.employeeFuncButtons {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.employeeTable {
+    width: 90%;
+    margin: auto;
+}
