--- a/client/scss/_mainStyles.scss
+++ b/client/scss/_mainStyles.scss
@@ -69,3 +69,9 @@ h1 {
     width: 90%;
     margin: auto;
 }
+
+.skillForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
