--- a/client/scss/_mainStyles.scss
+++ b/client/scss/_mainStyles.scss
@@ -29,7 +29,7 @@ h1 {
 }
 
 .managerPageContainer {
-    width: 80%;
+    width: 90%;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -44,13 +44,15 @@ h1 {
 }
 
 
-.employeeFunctionalityContainer {
+.employeeFunctionalityContainer, .departmentFunctionalityContainer {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
 }
+
+
 
 
 .functionalityHeader {
@@ -65,9 +67,10 @@ h1 {
     align-items: center;
 }
 
-.employeeTable {
-    width: 90%;
-    margin: auto;
+.displayTable {
+    width: 100%;
+    margin: 0;
+    text-align: left;
 }
 
 .skillForm {
